--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 accelerate==1.6.0
 transformers==4.54.1
+optimum==2.1.0
+optimum-quanto==0.2.7
 diffusers[torch]==0.32.1
 ftfy==6.3.1
 # albumentations==1.3.0
